# aocl-libm-ose

./: .gitignore  BUILDING-ose.txt  BUILDING.md  BUILDING.txt  BUILDING_on_Linux.txt  BUILDING_on_Win.txt  BUILDING_on_Windows.txt  CMakeLists.txt  CMakePresets.json  COPYRIGHT.txt  LICENSE  Makefile  NOTICES  README  README.md  SConstruct  requirements.txt
src/: CMakeLists.txt  SConscript  alm_main.c  alm_special.c  alm_version.h  buildsysinfo.h  cpu_features.c  entry_pt.c  entry_pt_macros.h  entry_pt_map.c  entry_pt_map_fastlibm.c  entry_pt_map_libm._c  entry_pt_map_libm.c  iface.c  ld-syms-libm.lds  libm_special.c  version.build.h
src/arch/: CMakeLists.txt  SConscript
src/arch/zen/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrtf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  expm1.c  (+174 more)
src/arch/zen2/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrtf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  expm1.c  (+174 more)
src/arch/zen3/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrtf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  expm1.c  (+174 more)
src/arch/zen4/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrtf.c  cbtrf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  (+208 more)
src/arch/zen5/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbtrf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  expm1.c  (+207 more)
src/compat/: CMakeLists.txt  SConscript  glibc-compat.c
src/fast/: CMakeLists.txt  SConscript  _exp_tables.c  acos.c  acosf.c  asin.c  asinf.c  atan.c  atanf.c  cos.c  cosf.c  erf.c  erff.c  exp.c  expf.c  log.c  logf.c  pow.c  powf.c  sin.c  sinf.c  tan.c  tanf.c
src/iface/: CMakeLists.txt  SConscript  acos.c  acosh.c  add.c  addi.c  asin.c  asinh.c  atan.c  atan2.c  atanh.c  cbrt.c  ceil.c  cexp.c  clog.c  copysign.c  cos.c  cosh.c  cospi.c  cpow.c  div.c  divi.c  erf.c  exp.c  exp10.c  exp2.c  expm1.c  fabs.c  fdim.c  finite.c  floor.c  fma.c  fmax.c  fmaxi.c  fmin.c  fmini.c  fmod.c  frexp.c  hypot.c  ilogb.c  (+37 more)
src/isa/: CMakeLists.txt  SConscript
src/isa/avx/: CMakeLists.txt  fma.c  fmaf.c  log1p.c  log1pf.c  vrd2_tan.c  vrs4_tanf.c
src/isa/avx2/: CMakeLists.txt  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrtf.c  ceil.c  ceilf.c  cexp.c  cexpf.c  clog.c  clogf.c  copysign.c  copysignf.c  cos.c  cosf.c  cosh.c  coshf.c  cpow.c  cpowf.c  erf.c  erff.c  exp.c  exp10.c  exp10f.c  exp2.c  exp2f.c  expf.c  expm1.c  (+175 more)
src/isa/include/: exp_tables.h  log_tables.h
src/kern/: expf.c  log1p.c  sqrt_pos.c  sqrtf_pos.c
src/optimized/: CMakeLists.txt  SConscript  acosf.c  acosh.c  asin.c  asinf.c  atan.c  atan2.c  atanf.c  atanh.c  atanhf.c  cbrt.c  cbrt_data.h  ceil.c  ceilf.c  copysign.c  cos.c  cosh.c  coshf.c  erf.c  erff.c  exp10.c  exp10f.c  exp2.c  exp_data.h  expf.c  expm1.c  expm1f.c  expm1f_data.h  fabs.c  fdim.c  fdimf.c  floor.c  floorf.c  fmax.c  fmaxf.c  fmin.c  fminf.c  fmod.c  fmodf.c  (+31 more)
src/optimized/cmplx/: cexp.c  cexpf.c  clogf.c  cpow.c  cpowf.c
src/optimized/data/: _exp_j_by_64.c  _exp_tbl_128_interleaved.data  _exp_tbl_64_interleaved.data
src/optimized/vec/: SConscript  vrd2_atan.c  vrd2_cos.c  vrd2_erf.c  vrd2_exp.c  vrd2_fabs.c  vrd2_log.c  vrd2_pow.c  vrd2_sin.c  vrd2_sincos.c  vrd2_sqrt.c  vrd2_tan.c  vrd4_atan.c  vrd4_cos.c  vrd4_exp.c  vrd4_exp2.c  vrd4_fabs.c  vrd4_log.c  vrd4_pow.c  vrd4_sin.c  vrd4_sincos.c  vrd4_sqrt.c  vrd4_tan.c  vrda_add.c  vrda_addi.c  vrda_cbrt.c  vrda_cos.c  vrda_div.c  vrda_divi.c  vrda_exp.c  vrda_exp10.c  vrda_exp2.c  vrda_expm1.c  vrda_fabs.c  vrda_fmax.c  vrda_fmaxi.c  vrda_fmin.c  vrda_fmini.c  vrda_log.c  vrda_log10.c  (+62 more)
src/optimized/vectormath/: SConscript  vrd2_linearfrac.c  vrd2_powx.c  vrd4_linearfrac.c  vrd4_powx.c  vrda_linearfrac.c  vrda_powx.c  vrs4_linearfracf.c  vrs4_powxf.c  vrs8_linearfracf.c  vrs8_powxf.c  vrsa_linearfracf.c  vrsa_powxf.c
src/optmized/: SConscript  acos.c  acosf.c  acosh.c  acoshf.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atan2_data.h  atanf.c  atanh.c  cbrtf.c  cbrtf_data.h  copysignf.c  cos.c  cosf.c  cosh_data.h  coshf.c  erf.c  erff.c  exp.c  exp2.c  exp2f.c  exp_data.h  exp_tables.c  expf.c  expf_data.h  expm1.c  expm1f.c  expm1f_data.h  fabsf.c  floorf.c  hypot.c  hypotf.c  log.c  log10.c  log10f.c  (+34 more)
src/optmized/cmplx/: SConscript  cexp.c  cexpf.c  clog.c  cpow.c  cpowf.c
src/optmized/data/: _exp_j_by_64.c  _exp_tbl_128_interleaved.data  (+6 more)
src/ref/: CMakeLists.txt  MapEntryPoints.c  SConscript  acos.c  acosf.c  acosh.c  acoshf.c  amd_pow.c  asin.c  asinf.c  asinh.c  asinhf.c  atan.c  atan2.c  atan2f.c  atanf.c  atanh.c  atanhf.c  ceil.c  ceilf.c  cosh.c  coshf.c  cospi.c  cospif.c  exp2.c  exp_tables.c  exp_tables_1024.c  finite.c  finitef.c  floor.c  floorf.c  fma.c  fmaf.c  frexp.c  frexpf.c  hypot.c  hypotf.c  ilogb.c  ilogbf.c  ldexp.c  (+50 more)
(+2294 files in other folders)
